avoid deep copies of pixels with Skia raster surfaces (tdf#132856)

SkCanvas::draw() leads to deep copies of the source bitmap, moreover
RasterWindowContext_win allocates the pixels in a way that
SkSurface_Raster has to do a deep copy because of not owning
the pixels.

Change-Id: I22f6a2c0f96faf99f94140eff26ec0c22fae96d9