external/skia/UnpackedTarball_skia.mk
@@ -34,6 +34,7 @@ skia_patches := \
     fix-without-gl.patch.0 \
     extend-rgb-to-rgba.patch.0 \
     windows-typeface-directwrite.patch.0 \
+    windows-raster-surface-no-copies.patch.1 \
 
 $(eval $(call gb_UnpackedTarball_set_patchlevel,skia,1))
 
